feat: complete E-commerce analytics engine